# artificial-life-simulator

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  install.sh  makefile  makefile.conf  makefile.config  makefile.tests  run_tests.sh
include/: common.h
include/controller/: blocking_queue.h  controller.h  event_queue.hpp  events.h  realtime_clock.h  timer.h
include/model/: clock.h  collections.h  collision.h  coodinates_system.h  decision.h  food.h  genotype.h  intersection.h  logic.h  model.h  objects.h  organism.h  primitives.h  simulation_clock.h  world.h
include/view/: camera.h  coordinates3d.h  view.h  viewmodel.h  window.h
src/: main.cpp
src/controller/: blocking_queue.cpp  controller.cpp  events.cpp  realtime_clock.cpp
src/model/: clock.cpp  collections.cpp  collision.cpp  coodrinates_system.cpp  coordinates_system.cpp  food.cpp  intersection.cpp  logic.cpp  model.cpp  objects.cpp  organism.cpp  primitives.cpp  simulation_clock.cpp  world.cpp
src/view/: camera.cpp  coordinates3d.cpp  view.cpp  viewmodel.cpp  window.cpp
test/: test_clock.cpp  test_main.cpp
tests/: test_clock.cpp  test_collision.cpp  test_intersection.cpp
